--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.SetupActivity"/>
+        <activity
+            android:name=".ui.activity.SetupActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activity.SettingActivity">
         </activity>
