--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:name=".ui.activity.SetupActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".ui.activity.SettingActivity">
+            android:name=".ui.activity.SettingActivity"
+            android:theme="@style/SettingActivityTheme">
         </activity>
     </application>
 
